--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Cellular Automata!</title>
+    <script src="jquery.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Let's make some worlds from rows!</h1>
 
-    <canvas id="canvas" width="600" height="600"></canvas>
+    <canvas id="canvas" width="1000" height="600"></canvas>
   </body>
 </html>
