tidying up, tuning parameters

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Let's make some worlds from rows!</h1>
-    
-    <canvas id="canvas" width="1000" height="600"></canvas>
+    Rule: <input type="number" id="userIn"> <br>
+    Resolution: <input type="number" id="cellsIn"> <br>
+    <button id="sub">Draw</button>
+    <!-- Well that solves the question of why it was taking so long to say "done": because height was 600: -->
+    <canvas id="canvas" width="1000" height="1000"></canvas>
   </body>
 </html>
