adding instructions, organizing code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Let's make some worlds from rows!</h1>
-    Rule: <input type="number" id="userIn"> <br>
-    Resolution: <input type="number" id="cellsIn"> <br>
+    Rule (between 1 and 255, which is 11111111 in binary): <input type="number" id="userIn"> <br>
+    Resolution (must be an even number): <input type="number" id="cellsIn"> <br>
     <button id="sub">Draw</button>
     <br>
     <!-- Well that solves the question of why it was taking so long to say "done": because height was 600: -->
