--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Let's make some worlds from rows!</h1>
+    Rule 90 generates the Sierpinski triangle! <br><br>
     Rule (between 1 and 255, which is 11111111 in binary): <input type="number" id="userIn"> <br>
     Resolution (must be an even number): <input type="number" id="cellsIn"> <br>
     <button id="sub">Draw</button>
