upping sizes of input text

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <p class="info">Each <span class='cells'>cell</span> in a new <span class='rows'>row</span> (ignoring the end-cells) is adjacent to three <span class='cells'>cells</span> in the previous <span class='rows'>row</span>.</p>
       <p class="info">The values of those three <span class='cells'>cells</span> (On/Off) determine the value of the new <span class='cells'>cell</span>.</p>
     </div>
-    <p style="margin-left: 50px" class="rules"> <b>Rule</b> (between 1 and 255, which is 11111111 in binary): <input type="number" id="userIn"> </p>
-    <p id="binaryRep" style='color: orange; margin-left: 50px'></p>
-    <p style="color: blue; margin-left: 50px"> <b>Resolution</b> (must be an even number): <input type="number" id="cellsIn"> </p>
+    <p style="margin-left: 50px; font-size: 23px" class="rules"> <b>Rule</b> (between 1 and 255, which is 11111111 in binary): <input type="number" id="userIn"> </p>
+    <p id="binaryRep" style='color: orange; margin-left: 50px;'></p>
+    <p style="color: blue; margin-left: 50px; font-size: 23px"> <b>Resolution</b> (must be an even number): <input type="number" id="cellsIn"> </p>
     <p style="margin-left:100px"><button id="sub">Draw</button></p>
     <p style="text-align: center; font-family: Garamandi; "> (<u>Hint</u>: Rule <span style="color: goldenrod; font-size: 20px;">90</span> generates the Sierpinski triangle (so do rules <span style="color: goldenrod; font-size: 20px;">126</span>, <span style="color: goldenrod; font-size: 20px;">129</span> and <span style="color: goldenrod; font-size: 20px;">161</span> -- with a twist)! Rule <span style="color: goldenrod; font-size: 20px;">195</span> is also quite pleasing.)</p>
 
